--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,6 +25,10 @@
 
 
 /* generals */
+html{
+    font-size: 20px;
+}
+
 body{
     font-family: "Opens Sans", sans-serif;
     padding-top: var(--hdr-height);
@@ -37,6 +41,17 @@ li{
 a{
     color: black;
     text-decoration: none;
+}
+
+img{
+    max-width: 100%;
+    height: auto;
+}
+
+h1{
+    font-size: 3.5rem;
+    font-weight: 900;
+    margin-bottom: 3rem;
 }
 
 /* utilites */
@@ -70,8 +85,20 @@ a{
     align-items: center;
 }
 
+.d-flex.align-flex-start{
+    align-items: flex-start;
+}
+
 .d-flex.f-gap10{
     gap: 10px;
+}
+
+.d-flex.flex-column{
+    flex-direction: column;
+}
+
+.btn{
+    padding: 15px 20px;
 }
 
 .btn.btn-main{
@@ -105,17 +132,34 @@ section{
     margin-bottom: 50px;
 }
 
+main .btn{
+    display: inline-block;
+}
+
 /* hero section */
 section#hero{
     background: linear-gradient(var(--hero-bg-color) 85%, #FFF 15%);
+    padding-top: 3rem;
 }
 
 #hero .flex-left{
-    flex: 0 0 35%;
+    flex: 0 0 30%;
+    position: relative;
 }
 
 #hero .flex-right{
-    flex: 0 0 65%;
+    flex: 0 0 70%;
+}
+
+#hero .flex-left > *{
+    margin-bottom: 2rem;
+}
+
+#hero .fa-arrow-down{
+    position: absolute;
+    bottom: 15%;
+    left: 0;
+    padding-bottom: 20px;
 }
 
 /* shop section */
