--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,8 +38,12 @@ li{
     list-style: none;
 }
 
-a{
+header a{
     color: black;
+    text-decoration: none;
+}
+
+a.btn{
     text-decoration: none;
 }
 
@@ -54,6 +58,15 @@ h1{
     margin-bottom: 3rem;
 }
 
+h2{
+    font-size: 2rem;
+    margin-bottom: 2rem;
+}
+
+p{
+    line-height: 1.3;
+}
+
 /* utilites */
 .container-big{
     max-width: 1440px;
@@ -63,6 +76,22 @@ h1{
 .container-small{
     max-width: 1080px;
     margin: 0 auto;
+}
+
+.radio-btn{
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    margin-right: .5rem;
+}
+
+.radio-btn.radio-checked{
+    border: .25rem solid var(--blue-btn-color);
+}
+
+.radio-btn.radio-unchecked{
+    border: .1rem solid gray;
 }
 
 .d-flex{
@@ -93,6 +122,10 @@ h1{
     gap: 10px;
 }
 
+.d-flex.f-gap40{
+    gap: 40px;
+}
+
 .d-flex.flex-column{
     flex-direction: column;
 }
@@ -105,6 +138,23 @@ h1{
     background-color: var(--blue-btn-color);
     color: white;
 }
+
+.mr2{
+    margin-right: 2rem;
+}
+
+.mb1{
+    margin-bottom: 1rem;
+}
+
+.mb2{
+    margin-bottom: 2rem;
+}
+
+.mb3{
+    margin-bottom: 3rem;
+}
+
 
 /* HEADER */
 header{
@@ -163,12 +213,73 @@ section#hero{
 }
 
 /* shop section */
-.shopping-plan{
-    flex: 0 0 calc(100%/3);
+.card-flex{
+    flex: 0 0 calc((100% - 80px) / 3);
+}
+
+.sopphing-cards-container{
+    margin: 2rem 0;
 }
 
 .card{
-    height: 200px;
+    border: 1px solid lightgray;
+}
+
+.card .card-title{
+    border-bottom: 1px solid lightgray;
+    text-align: center;
+    padding: 10px
+}
+
+.card .card-body{
+    padding: 2rem 1rem;
+    font-size: .9rem;
+}
+
+.fa-check{
+    color: var(--blue-btn-color);
+}
+
+.fa-ul{
+    margin-left: 1.5rem;
+}
+
+.card-body h3{
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.card-body .price{
+    font-weight: bolder;
+}
+
+.card-body .price-recurrency{
+    color: gray;
+    margin-bottom: 3rem;
+}
+
+.card-body ul li{
+    padding: .5rem 0;
+}
+
+.card-body .btn{
+    width: 100%;
+    text-align: center;
+    margin: 0 auto 1rem;
+}
+
+.card-body hr{
+    width: 25%;
+    margin: 2rem 0 3rem;
+    color: lightgray;
+}
+
+.card-body h4{
+    margin-bottom: 1rem;
+}
+
+.card-body.d-flex .flex-left{
+    flex-basis: 66%;
 }
 
 /* partners section */
