--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,7 +26,7 @@
 
 /* generals */
 html{
-    font-size: 20px;
+    font-size: 18px;
 }
 
 body{
@@ -53,9 +53,9 @@ img{
 }
 
 h1{
-    font-size: 3.5rem;
+    font-size: 4rem;
     font-weight: 900;
-    margin-bottom: 3rem;
+    margin-bottom: 4rem;
 }
 
 h2{
@@ -63,8 +63,13 @@ h2{
     margin-bottom: 2rem;
 }
 
+h3{
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+
 p{
-    line-height: 1.3;
+    line-height: 1.4;
 }
 
 /* utilites */
@@ -126,6 +131,10 @@ p{
     gap: 40px;
 }
 
+.d-flex.f-rowgap20{
+    row-gap: 20px;
+}
+
 .d-flex.flex-column{
     flex-direction: column;
 }
@@ -137,6 +146,12 @@ p{
 .btn.btn-main{
     background-color: var(--blue-btn-color);
     color: white;
+}
+
+.btn.btn-secondary{
+    border: 1px solid black;
+    background-color: white;
+    color: black;
 }
 
 .mr2{
@@ -179,7 +194,7 @@ header a{
 
 /* MAIN */
 section{
-    margin-bottom: 50px;
+    margin-bottom: 8rem;
 }
 
 main .btn{
@@ -190,6 +205,7 @@ main .btn{
 section#hero{
     background: linear-gradient(var(--hero-bg-color) 85%, #FFF 15%);
     padding-top: 3rem;
+    font-size: 1.2rem;
 }
 
 #hero .flex-left{
@@ -232,7 +248,7 @@ section#hero{
 }
 
 .card .card-body{
-    padding: 2rem 1rem;
+    padding: 2rem;
     font-size: .9rem;
 }
 
@@ -276,6 +292,7 @@ section#hero{
 
 .card-body h5{
     margin-bottom: 1rem;
+    font-size: 1rem;
 }
 
 .card-body.d-flex .flex-left{
@@ -289,11 +306,13 @@ section#hero{
 
 #partners .flex-right{
     flex: 0 0 45%;
+    padding: 3rem;
 }
 
 /* business section */
 #dropbox-business-promo .flex-item{
     width: calc(100% / 3);
+    padding: 2rem;
 }
 
 .partners-logoes-container *{
