--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,6 +12,8 @@
     --fter-color: #000;
     --hdr-height: 75px;
 
+
+    /* partners logoes background */
     --bg-designit: #a2d39b;
     --bg-asu: #61082b;
     --bg-uf: #0093ce;
@@ -24,22 +26,7 @@
     --bg-main-logo: #f5f5f5;
 }
 
-/* debug */
-.debug .db-border{
-    border: 2px dotted black;
-    height: 200px;
-}
-
-.debug .flex-left, .debug .flex-right, .debug .flex-item{
-    border: 2px dashed black;
-}
-
-
 /* generals */
-html{
-    font-size: 18px;
-}
-
 body{
     font-family: "Opens Sans", sans-serif;
     padding-top: var(--hdr-height);
@@ -49,22 +36,19 @@ li{
     list-style: none;
 }
 
-header a{
-    color: black;
-    text-decoration: none;
-}
-
+/*some <a> on the page use default decoration and colors, we only modify <a> where is needed*/
 a.btn{
     text-decoration: none;
 }
 
+/* every image needs resize */
 img{
     max-width: 100%;
     height: auto;
 }
 
 hr{
-    margin: 2.5rem 0;
+    margin: 40px 0;
     width: 20%;
     color: lightgray;
 }
@@ -72,27 +56,31 @@ hr{
 h1{
     font-size: 4rem;
     font-weight: 900;
-    padding-bottom: 4.5rem;
+    padding-bottom: 50px;
 }
 
 h2{
-    font-size: 2rem;
-    padding-bottom: 3.5rem;
+    font-size: 2.2rem;
+    padding-bottom: 40px;
 }
 
 h3{
     font-size: 1.5rem;
-    padding-bottom: 1.5rem;
+    padding-bottom: 30px;
 }
 
 h4{
     font-size: 1.5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 15px;
+}
+
+h5{
+    font-size: 1.05rem;
 }
 
 h6{
-    margin-bottom: 1rem;
     font-size: 1rem;
+    margin-bottom: 15px;
 }
 
 p{
@@ -112,18 +100,18 @@ p{
 
 .radio-btn{
     display: inline-block;
-    width: 1rem;
-    height: 1rem;
+    width: 20px;
+    height: 20px;
     border-radius: 50%;
-    margin-right: .5rem;
+    margin-right: 10px;
 }
 
 .radio-btn.radio-checked{
-    border: .25rem solid var(--blue-btn-color);
+    border: 5px solid var(--blue-btn-color);
 }
 
 .radio-btn.radio-unchecked{
-    border: .1rem solid gray;
+    border: 2px solid gray;
 }
 
 .d-flex{
@@ -180,28 +168,28 @@ p{
     color: black;
 }
 
-.border-black{
+.btn.border-black{
     border: 1px solid black;
 }
 
-.mr2{
-    margin-right: 2rem;
+.mr40{
+    margin-right: 40px;
 }
 
 .mb1{
-    margin-bottom: 1rem;
+    margin-bottom: 10px;
 }
 
 .mb2{
-    margin-bottom: 2rem;
+    margin-bottom: 20px;
 }
 
 .mb3{
-    margin-bottom: 3rem;
+    margin-bottom: 30px;
 }
 
 .mb5{
-    margin-bottom: 5rem;
+    margin-bottom: 50px;
 }
 
 .border-bottom{
@@ -222,6 +210,11 @@ header{
     z-index: 1;    
 }
 
+header a{
+    color: black;
+    text-decoration: none;
+}
+
 header .logo{
     margin-right: 20px;
 }
@@ -232,7 +225,7 @@ header a{
 
 /* MAIN */
 section{
-    margin-bottom: 8rem;
+    margin-bottom: 100px;
 }
 
 main .btn{
@@ -241,8 +234,9 @@ main .btn{
 
 /* hero section */
 section#hero{
+    /* background may change */
     background: linear-gradient(var(--hero-bg-color) 85%, #FFF 15%);
-    padding-top: 3rem;
+    padding-top: 50px;
     font-size: 1.2rem;
 }
 
@@ -256,14 +250,15 @@ section#hero{
 }
 
 #hero .flex-left > *{
-    margin-bottom: 2rem;
+    margin-bottom: 30px;
 }
 
 #hero .fa-arrow-down{
     position: absolute;
+    /* bottom at 15% should follow background */
     bottom: 15%;
     left: 0;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
 }
 
 /* shop section */
@@ -272,7 +267,7 @@ section#hero{
 }
 
 .sopphing-cards-container{
-    margin: 2rem 0;
+    margin: 20px 0;
 }
 
 .card{
@@ -286,16 +281,16 @@ section#hero{
 }
 
 .card .card-body{
-    padding: 2rem;
-    font-size: .9rem;
+    padding: 35px;
 }
 
 .fa-check{
     color: var(--blue-btn-color);
 }
 
+/* this is needed to overwrite .fa-ul default margin-left; this file needs to be linked AFTER fa's stylesheet in order for this to work*/
 .fa-ul{
-    margin-left: 1.5rem;
+    margin-left: 25px;
 }
 
 .card-body .price{
@@ -304,20 +299,18 @@ section#hero{
 
 .card-body .price-recurrency{
     color: gray;
-    margin-bottom: 3rem;
+    margin-bottom: 50px;
 }
 
 .card-body ul li{
-    padding: .5rem 0;
+    padding: 5px;
 }
 
 .card-body .btn{
     width: 100%;
     text-align: center;
-    margin: 0 auto 1rem;
+    margin: 0 auto 20px;
 }
-
-
 
 .card-body.d-flex .flex-left{
     flex-basis: 66%;
@@ -330,36 +323,38 @@ section#hero{
 
 #partners .flex-right{
     flex: 0 0 45%;
-    padding: 3rem;
+    padding: 50px;
 }
 
 /* business section */
 .business-promo-container{
-    margin: 0 -2rem;
+    margin: 0 -30px;
 }
 
 #dropbox-business-promo .flex-item{
     width: calc(100% / 3);
-    padding: 2rem;
+    padding: 30px;
 }
 
-.partners-logoes-container > *{
+/* business clients */
+
+.clients-logoes-container > *{
     flex: 0 0 calc(100% / 3);
 }
 
-/* business partners logoes */
-.partners-logoes-container img{
+.clients-logoes-container img{
     width: 50%;
 }
 
-.partners-logoes-container .flex-item{
+.clients-logoes-container .flex-item{
     flex: 0 0 50%;
+    /* height is necessary to give the items squared appearance; it may change */
     height: 300px;
 }
 
-#dropbox-business-partners .flex-center{
+#dropbox-business-clients .flex-center{
     background-color: var(--bg-main-logo);
-    padding: 2.5rem;
+    padding: 50px;
 }
 
 /* partners-logo backgrounds */
@@ -395,30 +390,30 @@ section#hero{
     background-color: var(--bg-cco);
 }
 
-.bus-part-bottom{
+.business-clients-bottom{
     background-color: var(--hero-bg-color);
     color: #61082b;
     padding: 100px 0;
 }
 
-.bus-part-bottom .flex-left{
+.business-clients-bottom .flex-left{
     flex: 0 0 60%;
 }
 
-.bus-part-bottom .flex-right{
+.business-clients-bottom .flex-right{
     flex: 0 0 40%;
     text-align: right;
     align-self: flex-start;
 }
 
-/* need to overwrite h2 padding or it will offset h2 vertically */
-.bus-part-bottom h2{
+/* need to overwrite h2 padding or it will offset h2 */
+.business-clients-bottom h2{
     padding: 0;
 }
 
 /* FAQ */
 .faq-row{
-    padding: 1.5rem 1.5rem 1.5rem 0;
+    padding: 30px 30px 30px 0;
     cursor: pointer;
 }
 
@@ -426,7 +421,7 @@ section#hero{
 footer{
     background-color: var(--fter-color);
     color: white;
-    padding: 4rem 0;
+    padding: 70px 0;
 }
 
 footer a{
@@ -435,7 +430,7 @@ footer a{
 }
 
 footer li{
-    padding-bottom: 1rem;
+    padding-bottom: 15px;
 }
 
 footer .flex-item{
@@ -444,12 +439,13 @@ footer .flex-item{
 }
 
 .fter-top{
-    padding-bottom: 4rem;
+    padding-bottom: 50px;
 }
 
 footer .language-selector{
-    padding-top: 2rem;
-    padding-right: 2rem;
+    padding-top: 25px;
+    /* pad-right is used to determinate the above bar length */
+    padding-right: 75px;
     border-top: 2px solid gray;
     color: gray;
     cursor: pointer;
